chore: change font-weight of pharap

--- a/source/scss/06-components/_main.scss
+++ b/source/scss/06-components/_main.scss
@@ -1,7 +1,8 @@
 .c-main{
   overflow-x: hidden;
   &__slide{
-    height: 750px;
+    min-height: 650px;
+    height: 100vh;
     background: #ccc;
     position: relative;
 
@@ -11,7 +12,8 @@
 
     h3{
       text-align: right;
-      font-size: 2.5rem;
+      font-size: 3.5rem;
+      line-height: 1.2;
       color: #000;
       position: relative;
 
