--- a/source/scss/06-components/_section_clients.scss
+++ b/source/scss/06-components/_section_clients.scss
@@ -1,6 +1,6 @@
 .c-section-clients{
   border-top: 20px solid #969696;
-  padding-bottom: 2rem;
+  padding: 4 rem 0;
   .container{
     display: flex;
   }
