--- a/source/templates/contact.pug
+++ b/source/templates/contact.pug
@@ -50,7 +50,7 @@ html(lang="es")
                       textarea(cols="30", rows="10")
                   .c-contact__form-group
                     button enviar >
-            a(href="#!").c-presentations__button regresar
+            a(href="#!").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
