--- a/source/templates/gallery-1.pug
+++ b/source/templates/gallery-1.pug
@@ -32,7 +32,7 @@ html(lang="es")
                 .item
                   img(src="dist/img/gallery-2-6.png", alt="")
                 
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
