--- a/source/templates/our-chocolate-1.pug
+++ b/source/templates/our-chocolate-1.pug
@@ -33,24 +33,24 @@ html(lang="es")
               img(src="dist/img/chocolate-complete-2.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/chocolate-complete-2-title.png", alt="")
-                p Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. ideal para preparar chocolate de taza.
+                p Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. Ideal para preparar chocolate de taza.
                 ul
                   li <b>Origen:</b> Finca La Torre - Villa Rica
                   li <b>Proceso:</b> Lavado
                   li <b>Altitud:</b> 400 - 450msnm
-                  li <b>Variedad:</b> Criollo y CCN51 100% orgánico y artesanal
-                .c-presentations__main__price
+                  li <b>Variedad:</b> Criollo y CCN51-100% orgánico y artesanal
+                .c-presentations__main__price(style="color:#803000;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item.small
                     span 30gr.
-                    span s/.4
+                    span S/.4
                   .c-presentations__main__price-item.small
                     span 50gr.
-                    span s/.7
+                    span S/.7
                   .c-presentations__main__price-item.small
                     span 125gr.
-                    span s/.16
-            a(href="index.html").c-presentations__button regresar
+                    span S/.16
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
