--- a/source/templates/our-coffee-2.pug
+++ b/source/templates/our-coffee-2.pug
@@ -25,16 +25,16 @@ html(lang="es")
                   li <b>Proceso:</b> Lavado
                   li <b>Altitud:</b> 1400 a 1800 m.s.n.m.
                   li <b>Variedad:</b> Caturra, Geisha, Catimor y Catuai.
-                .c-presentations__main__price
+                .c-presentations__main__price(style="color:#7D9100;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 250gr.
-                    span s/.25
+                    span S/.25
                   .c-presentations__main__price-item
                     span 1kg.
-                    span s/.--
+                    span S/.60
           .col-12
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
