--- a/source/templates/our-coffee.pug
+++ b/source/templates/our-coffee.pug
@@ -29,12 +29,12 @@ html(lang="es")
                   h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 250gr.
-                    span s/.20
+                    span S/.20
                   .c-presentations__main__price-item
                     span 1kg.
-                    span s/.50
+                    span S/.50
           .col-12
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
