--- a/source/templates/our-method.pug
+++ b/source/templates/our-method.pug
@@ -9,7 +9,7 @@ html(lang="es")
     main.c-banner-products
       img(src="dist/img/banner-metodo.png", alt="")
       .c-banner-products__title.wow.fadeInDown
-        h1 nuestros<br>metodos
+        h1 nuestros<br>métodos
     section.c-presentations
       .container
         .row.wow.fadeInDown
@@ -18,19 +18,19 @@ html(lang="es")
           .col-6.col-sm-6.col-md-3
             a(href="our-method.html").c-presentations__item
               img(src="dist/img/metodo-1.png", alt="")
-              p Café KERE'Ma Premium
+              p Caf. Italiana Kere’ma
           .col-6.col-sm-6.col-md-3
             a(href="our-method-1.html").c-presentations__item
               img(src="dist/img/metodo-2.png", alt="")
-              p Café KERE'Ma Especial
+              p Caf. V60 Kere’ma
           .col-6.col-sm-6.col-md-3
             a(href="our-method-2.html").c-presentations__item
               img(src="dist/img/metodo-3.png", alt="")
-              p Café KERE'Ma Natural
+              p Caf. Gota a Gota Kere’ma
           .col-6.col-sm-6.col-md-3
             a(href="our-method-3.html").c-presentations__item
               img(src="dist/img/metodo-3.png", alt="")
-              p Café KERE'Ma Honey
+              p Caf. Francesa Kere’ma
     section.c-presentations
       .container
         .row
@@ -40,13 +40,13 @@ html(lang="es")
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-1-title.png", alt="")
                 p La cafetera italiana o cafetera moka, es una cafetera que, de manera similar a la cafetera expreso, elabora el café haciendo pasar agua hervida presurizada por vapor, a través de café molido.
-                .c-presentations__main__price
+                .c-presentations__main__price(style="color:#81604C;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 6 tazas
-                    span s/.35
+                    span S/.35
           .col-12
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
