--- a/source/scss/06-components/_presentations.scss
+++ b/source/scss/06-components/_presentations.scss
@@ -61,6 +61,9 @@
     }
     &__description{
       padding: 0 3rem;
+      P{
+        font-weight: 200;
+      }
       img{  
         display: block;
         width: 45%;
