--- a/source/scss/06-components/_section-map.scss
+++ b/source/scss/06-components/_section-map.scss
@@ -19,6 +19,7 @@
     transform: translate(-50%);
     background: #000;
     color: white;
+    font-size: 1.4rem;
     padding: .5rem 1rem;
     border-radius: .5rem;
   }
