--- a/source/scss/06-components/_section-products.scss
+++ b/source/scss/06-components/_section-products.scss
@@ -1,6 +1,6 @@
 .c-section-products{
   position: relative;
-  padding: 6rem 0 4rem;
+  padding: 8rem 0 8rem;
   overflow-x: hidden;
 
   > img{
@@ -18,6 +18,7 @@
   }
 
   @media only screen and (min-width: 992px){
+    padding: 6rem 0 6rem;
     .slick-arrow{
       display: block !important;
     }
@@ -67,6 +68,7 @@
       }
       h4{
         font-size: 3rem;
+        line-height: 1.4;
       }
 
       a{
@@ -76,10 +78,12 @@
         padding: .5rem 2.5rem;
         border-radius: 2rem;
         border: 2px solid white;
+        transition:all .3s;
 
         &:hover{
           outline: none;
           text-decoration: none;
+          background: darken(#FF6300,7);
         }
       }
     }
