--- a/source/templates/our-chocolate.pug
+++ b/source/templates/our-chocolate.pug
@@ -33,18 +33,18 @@ html(lang="es")
               img(src="dist/img/chocolate-complete-1.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/chocolate-complete-1-title.png", alt="")
-                p Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. ideal para preparar chocolate de taza.
+                p Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. Ideal para preparar chocolate de taza.
                 ul
                   li <b>Origen:</b> Finca La Torre - Villa Rica
                   li <b>Proceso:</b> Lavado
                   li <b>Altitud:</b> 400 - 450msnm
-                  li <b>Variedad:</b> Criollo y CCN51 100% orgánico y artesanal
-                .c-presentations__main__price
+                  li <b>Variedad:</b> Criollo y CCN51-100% orgánico y artesanal
+                .c-presentations__main__price(style="color:#803000;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 190gr.
-                    span s/.13
-            a(href="index.html").c-presentations__button regresar
+                    span S/.13
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
