--- a/source/templates/our-method-1.pug
+++ b/source/templates/our-method-1.pug
@@ -9,7 +9,7 @@ html(lang="es")
     main.c-banner-products
       img(src="dist/img/banner-metodo.png", alt="")
       .c-banner-products__title.wow.fadeInDown
-        h1 nuestros<br>metodos
+        h1 nuestros<br>métodos
     section.c-presentations
       .container
         .row.wow.fadeInDown
@@ -40,13 +40,13 @@ html(lang="es")
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-2-title.png", alt="")
                 p La cafetera V60 (Espresso Manera), se trata de un sistema de filtrado que dará lugar a una taza muy suave y aromática.
-                .c-presentations__main__price
+                .c-presentations__main__price(style="color:#81604C;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 4 tazas
-                    span s/.40
+                    span S/.40
           .col-12
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
