--- a/source/templates/our-method-2.pug
+++ b/source/templates/our-method-2.pug
@@ -9,7 +9,7 @@ html(lang="es")
     main.c-banner-products
       img(src="dist/img/banner-metodo.png", alt="")
       .c-banner-products__title.wow.fadeInDown
-        h1 nuestros<br>metodos
+        h1 nuestros<br>métodos
     section.c-presentations
       .container
         .row.wow.fadeInDown
@@ -40,16 +40,16 @@ html(lang="es")
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-3-title.png", alt="")
                 p Este tipo de preparación es para un café americano. Al café que se obtenga le deberá añadir a su taza un poco de agua hervida. Este método le permitirá disfrutar de todo un proceso: desde que vierte agua caliente al café y se emite la fragancia.
-                .c-presentations__main__price
+                .c-presentations__main__price(style="color:#81604C;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 7 tazas<br>(1 cuerpo)
-                    span s/.50
+                    span S/.50
                   .c-presentations__main__price-item
                     span 7 tazas<br>(2 cuerpo)
-                    span s/.55
+                    span S/.55
           .col-12
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
