--- a/source/templates/our-method-3.pug
+++ b/source/templates/our-method-3.pug
@@ -9,7 +9,7 @@ html(lang="es")
     main.c-banner-products
       img(src="dist/img/banner-metodo.png", alt="")
       .c-banner-products__title.wow.fadeInDown
-        h1 nuestros<br>metodos
+        h1 nuestros<br>métodos
     section.c-presentations
       .container
         .row.wow.fadeInDown
@@ -40,19 +40,19 @@ html(lang="es")
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-4-title.png", alt="")
                 p La prensa francesa tiene una forma exterior muy similar a la de un pistón o émbolo que se desliza sobre una superficie cilíndrica de vidrio o plástico, suele tener un asa para que pueda verterse el contenido de su interior a una taza cuando se considere listo.
-                .c-presentations__main__price
+                .c-presentations__main__price(style="color:#81604C;")
                   h4 Presentaciones:
                   .c-presentations__main__price-item.small
                     span 300ml
-                    span s/.28
+                    span S/.28
                   .c-presentations__main__price-item.small
                     span 600ml
-                    span s/.35
+                    span S/.35
                   .c-presentations__main__price-item.small
                     span 800ml
-                    span s/.45
+                    span S/.45
           .col-12
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
