--- a/source/templates/our-work.pug
+++ b/source/templates/our-work.pug
@@ -22,7 +22,7 @@ html(lang="es")
                 img(src="dist/img/work-complete-1-title.png", alt="")
                 p Te invitamos a recorrer nuestra finca, aprender sobre el proceso productivo del café, que inicia en la semilla, viveros, plantaciones; hasta el resultado final, una buena taza de café recién pasado.
                 
-            a(href="index.html").c-presentations__button regresar
+            a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
     include components/footer.pug
