agree new images

--- a/source/templates/components/section-testimonial.pug
+++ b/source/templates/components/section-testimonial.pug
@@ -8,11 +8,43 @@ section.c-section-testimonials
         .c-slider-testimonial.slider
           div
             .c-section-testimonials__slide.wow.fadeInDown
-              img(src="dist/img/testimonial.png", alt="")
-              span Gerita Vásquez
+              img(src="dist/img/testimonial-2.png", alt="")
+              span Huallpatuero Liz
 
               .c-section-testimonials__description
                 p “Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”
+                img(src="dist/img/testimonial_icon.png", alt="")
+          div
+            .c-section-testimonials__slide.wow.fadeInDown
+              img(src="dist/img/testimonial-6.png", alt="")
+              span Aleja Bcc
+
+              .c-section-testimonials__description
+                p “Café riquisimos! ... y un super paseo en su finca(ruta a la laguna Oconal conociendo su producción y con una vista espectacular del paisaje cafetero).”
+                img(src="dist/img/testimonial_icon.png", alt="")
+          div
+            .c-section-testimonials__slide.wow.fadeInDown
+              img(src="dist/img/testimonial-3.png", alt="")
+              span Fernando Maquera
+
+              .c-section-testimonials__description
+                p “Sinceramente un excelente café, gracias por el recorrido donde nos explicaron la elaboración del café, la verdad sobre el café instantáneo y la degustación de su café delicioso muchas gracias.”
+                img(src="dist/img/testimonial_icon.png", alt="")
+          div
+            .c-section-testimonials__slide.wow.fadeInDown
+              img(src="dist/img/testimonial-4.png", alt="")
+              span Juliana Rafael Mendoza
+
+              .c-section-testimonials__description
+                p “Excelente café, que no solo lo hace rico sus granos de alta calidad sino la hospitalidad de su familia, me quedo fascinado con su historia, tradición, calidez de familia y su buen café... Regresaremos para que Francisco nos guie.”
+                img(src="dist/img/testimonial_icon.png", alt="")
+          div
+            .c-section-testimonials__slide.wow.fadeInDown
+              img(src="dist/img/testimonial-5.png", alt="")
+              span Mayra Stephanie Díaz Núñez
+
+              .c-section-testimonials__description
+                p “Linda experiencia, el major Café!!... Edgar y su esposa fueron muy amables en explicarnos todo el proceso del café y las diferentes técnicas... gracias por todo. Se los recomiendo.”
                 img(src="dist/img/testimonial_icon.png", alt="")
           div
             .c-section-testimonials__slide.wow.fadeInDown
@@ -20,5 +52,13 @@ section.c-section-testimonials
               span Gerita Vásquez
 
               .c-section-testimonials__description
-                p “Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”
+                p “Un lugar muy mágico y su gente es muy amable.”
+                img(src="dist/img/testimonial_icon.png", alt="")
+          div
+            .c-section-testimonials__slide.wow.fadeInDown
+              img(src="dist/img/testimonial-1.png", alt="")
+              span Renee Coba
+
+              .c-section-testimonials__description
+                p “Excelente y sabor muy agradable.”
                 img(src="dist/img/testimonial_icon.png", alt="")
