--- a/source/templates/components/section-gallery.pug
+++ b/source/templates/components/section-gallery.pug
@@ -4,21 +4,27 @@ section.c-section-products
     .c-slider-gallery.slider
       div
         .c-section-products__slide
-          img(src="dist/img/logo_coffee.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/logo_coffee.png", alt="").wow.fadeInLeft
+            img(src="dist/img/logo_coffee-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 Consumi<br>dores
             a(href="gallery-2.html") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/logo_progress.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/logo_progress.png", alt="").wow.fadeInLeft
+            img(src="dist/img/logo_progress-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 proceso de<br>calidad
             a(href="gallery-1.html") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/logo_plants.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/logo_plants.png", alt="").wow.fadeInLeft
+            img(src="dist/img/logo_plants-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 áreas de<br>producción<br>de café
