--- a/source/templates/components/section-products.pug
+++ b/source/templates/components/section-products.pug
@@ -4,28 +4,36 @@ section.c-section-products
     .c-slider-principal.slider
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_work.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/coffee_work.png", alt="").wow.fadeInLeft
+            img(src="dist/img/coffee_work-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>trabajo
             a(href="our-work.html") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_methods.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/coffee_methods.png", alt="").wow.fadeInLeft
+            img(src="dist/img/coffee_methods-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>métodos
             a(href="our-method.html") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_chocolate.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/coffee_chocolate.png", alt="").wow.fadeInLeft
+            img(src="dist/img/coffee_chocolate-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>chocolates
             a(href="our-chocolate.html") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_coffe.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__image
+            img(src="dist/img/coffee_coffe.png", alt="").wow.fadeInLeft
+            img(src="dist/img/coffee_coffee-background.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>cafés
