--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -11,8 +11,8 @@ html(lang="es")
     include components/section-about.pug
     include components/section-gallery.pug
 
-    section.c-section-map
-      img(src="dist/img/map-site.png", alt="")
+    a(href="https://www.google.com/maps/place/FINCA+LA+TORRE/@-10.7470277,-75.2760082,17z/data=!4m13!1m7!3m6!1s0x910996e730ed15c7:0x7fd22891b25a50cb!2sEl+Oconal,+Villa+Rica+19300!3b1!8m2!3d-10.746917!4d-75.277124!3m4!1s0x910996e8ff99825f:0x117e3ac71694cc24!8m2!3d-10.7463949!4d-75.2742259" target="_blank").c-section-map
+      img(src="dist/img/map.svg", alt="")
       p Carretera el Oconal - Villa Rica (0.2 km)
 
     include components/section-testimonial.pug
