--- a/source/templates/our-coffee-1.pug
+++ b/source/templates/our-coffee-1.pug
@@ -16,7 +16,9 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/coffee-complete-2.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/coffee-complete-2.png", alt="").wow.fadeInLeft
+                img(src="dist/img/coffee-complete-2-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/coffee-complete-2-title.png", alt="")
                 p De proceso lavado. Perfil de tueste; de sabores a frutos rojos, notas a durazno y mandarina, cuerpo cremoso, acidez brillante, con notas dulces y cítricas.
