--- a/source/templates/our-coffee-2.pug
+++ b/source/templates/our-coffee-2.pug
@@ -16,7 +16,9 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/coffee-complete-3.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/coffee-complete-3.png", alt="").wow.fadeInLeft
+                img(src="dist/img/coffee-complete-3-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/coffee-complete-3-title.png", alt="")
                 p De proceso natural. Perfil de tueste; de cuerpo intenso, baja acidez, sabor exótico y notas a vino dulce y frutas.
