--- a/source/templates/our-coffee-3.pug
+++ b/source/templates/our-coffee-3.pug
@@ -16,7 +16,9 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/coffee-complete-4.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/coffee-complete-4.png", alt="").wow.fadeInLeft
+                img(src="dist/img/coffee-complete-4-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/coffee-complete-4-title.png", alt="")
                 p De proceso semi lavado. Perfil de tueste; de sabores únicos, caracterizado por un sabor diferente, con notas a caramelo y frutos rojos. Acidez dulce.
