--- a/source/templates/our-coffee.pug
+++ b/source/templates/our-coffee.pug
@@ -16,7 +16,9 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/coffee-complete-1.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/coffee-complete-1.png", alt="").wow.fadeInLeft
+                img(src="dist/img/coffee-complete-1-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/coffee-complete-1-title.png", alt="")
                 p Nuestro clásico, Perfil de tueste; de sabores a caramelo, pasta de cacao, chocolate y flores, cuerpo medio, acidez balanceada con notas cítricas.
