--- a/source/templates/our-method-2.pug
+++ b/source/templates/our-method-2.pug
@@ -29,14 +29,16 @@ html(lang="es")
               p Café KERE'Ma Natural
           .col-6.col-sm-6.col-md-3
             a(href="our-method-3.html").c-presentations__item
-              img(src="dist/img/metodo-3.png", alt="")
+              img(src="dist/img/metodo-4.png", alt="")
               p Café KERE'Ma Honey
     section.c-presentations
       .container
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/metodo-complete-3.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/metodo-complete-3.png", alt="").wow.fadeInLeft
+                img(src="dist/img/metodo-complete-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-3-title.png", alt="")
                 p Este tipo de preparación es para un café americano. Al café que se obtenga le deberá añadir a su taza un poco de agua hervida. Este método le permitirá disfrutar de todo un proceso: desde que vierte agua caliente al café y se emite la fragancia.
