--- a/source/scss/06-components/_section-map.scss
+++ b/source/scss/06-components/_section-map.scss
@@ -1,5 +1,6 @@
 .c-section-map{
   position: relative;
+  display: block;
 
   img{
     display: block;
@@ -19,8 +20,13 @@
     transform: translate(-50%);
     background: #000;
     color: white;
-    font-size: 1.4rem;
+    font-size: 1rem;
     padding: .5rem 1rem;
     border-radius: .5rem;
+    text-align: center;
+
+    @media only screen and (min-width: 992px){
+      font-size: 1.4rem;
+    }
   }
 }
