--- a/source/scss/06-components/_section-products.scss
+++ b/source/scss/06-components/_section-products.scss
@@ -1,6 +1,6 @@
 .c-section-products{
   position: relative;
-  padding: 8rem 0 8rem;
+  padding: 6rem 0;
   overflow-x: hidden;
 
   > img{
@@ -14,13 +14,26 @@
   }
 
   .slick-arrow{
-    display: none !important;
-  }
+    padding: 0 4rem;
+    display: block !important;
+    height: 6rem;
+    background: url(../img/arrow.png);
+    width: 3rem;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: translate(0, 0) !important;
 
-  @media only screen and (min-width: 992px){
-    padding: 6rem 0 6rem;
-    .slick-arrow{
-      display: block !important;
+    &:before{
+      display: none !important;
+    }
+
+    &.slick-next{
+      transform: translate(0, 0) rotateY(180deg) !important;
+    }
+
+    @media only screen and (min-width: 992px){
+      padding: 0 0;
     }
   }
 
@@ -35,17 +48,36 @@
       flex-direction: row;
     }
 
-    img{
-      width: 60%;
+    &__image{
+      width: 100%;
       height: auto;
       object-fit: contain;
       order: 1;
       margin-top: 2rem;
+      position: relative;
+
+      img:first-child{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 70%;
+        object-fit: contain;
+        object-position: bottom center;
+      }
+      img:last-child{
+        
+        height: 550px !important;
+        object-fit: contain;
+        object-position: top center;
+        width: 100%;
+        height: auto;
+        margin: 0 auto;
+      }
 
       @media only screen and (min-width: 992px){
-        height: 420px;
         order: -1;
-        margin-top: 0;
+        width: 50%;
       }
   
     }
@@ -59,7 +91,7 @@
       
 
       @media only screen and (min-width: 992px){
-        width: 40%;
+        width: 50%;
         text-align: right;
       }
 
