--- a/source/scss/06-components/_section_clients.scss
+++ b/source/scss/06-components/_section_clients.scss
@@ -3,16 +3,22 @@
   padding: 4rem 0 6rem;
   .container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   &__image{
-    width: 20%;
+    width: 50%;
     padding: 1rem;
 
     img{
       width: 100%;
       height: 5rem;
       object-fit: contain;
+    }
+
+    @media only screen and (min-width: 992px){
+      width: 20%;
     }
   }
 
