--- a/source/templates/our-chocolate-1.pug
+++ b/source/templates/our-chocolate-1.pug
@@ -30,7 +30,9 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/chocolate-complete-2.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/chocolate-complete-2.png", alt="").wow.fadeInLeft
+                img(src="dist/img/chocolate-complete-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/chocolate-complete-2-title.png", alt="")
                 p Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. Ideal para preparar chocolate de taza.
@@ -40,16 +42,16 @@ html(lang="es")
                   li <b>Altitud:</b> 400 - 450msnm
                   li <b>Variedad:</b> Criollo y CCN51-100% orgánico y artesanal
                 .c-presentations__main__price(style="color:#803000;")
-                  h4 Presentaciones:
+                  h4(style="color:#803000;") Presentaciones:
                   .c-presentations__main__price-item.small
-                    span 30gr.
-                    span S/.4
+                    span(style="color:#803000;") 30gr.
+                    span(style="box-shadow:0 0 0 2px #803000;") S/.4
                   .c-presentations__main__price-item.small
-                    span 50gr.
-                    span S/.7
+                    span(style="color:#803000;") 50gr.
+                    span(style="box-shadow:0 0 0 2px #803000;") S/.7
                   .c-presentations__main__price-item.small
-                    span 125gr.
-                    span S/.16
+                    span(style="color:#803000;") 125gr.
+                    span(style="box-shadow:0 0 0 2px #803000;") S/.16
             a(href="index.html").c-presentations__button REGRESAR
             
     include components/section-clients.pug
