--- a/source/templates/our-method-3.pug
+++ b/source/templates/our-method-3.pug
@@ -29,14 +29,16 @@ html(lang="es")
               p Café KERE'Ma Natural
           .col-6.col-sm-6.col-md-3
             a(href="our-method-3.html").c-presentations__item
-              img(src="dist/img/metodo-3.png", alt="")
+              img(src="dist/img/metodo-4.png", alt="")
               p Café KERE'Ma Honey
     section.c-presentations
       .container
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/metodo-complete-4.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/metodo-complete-4.png", alt="").wow.fadeInLeft
+                img(src="dist/img/metodo-complete-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-4-title.png", alt="")
                 p La prensa francesa tiene una forma exterior muy similar a la de un pistón o émbolo que se desliza sobre una superficie cilíndrica de vidrio o plástico, suele tener un asa para que pueda verterse el contenido de su interior a una taza cuando se considere listo.
