--- a/source/templates/our-method.pug
+++ b/source/templates/our-method.pug
@@ -29,14 +29,16 @@ html(lang="es")
               p Caf. Gota a Gota Kere’ma
           .col-6.col-sm-6.col-md-3
             a(href="our-method-3.html").c-presentations__item
-              img(src="dist/img/metodo-3.png", alt="")
+              img(src="dist/img/metodo-4.png", alt="")
               p Caf. Francesa Kere’ma
     section.c-presentations
       .container
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/metodo-complete-1.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/metodo-complete-1.png", alt="").wow.fadeInLeft
+                img(src="dist/img/metodo-complete-background.png", alt="").wow.fadeInLeft
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/metodo-complete-1-title.png", alt="")
                 p La cafetera italiana o cafetera moka, es una cafetera que, de manera similar a la cafetera expreso, elabora el café haciendo pasar agua hervida presurizada por vapor, a través de café molido.
