--- a/source/templates/our-work.pug
+++ b/source/templates/our-work.pug
@@ -17,7 +17,9 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/work-complete-1.png", alt="").wow.fadeInLeft
+              .c-presentations__main-image
+                img(src="dist/img/work-complete-1.png", alt="").wow.fadeInLeft
+                span
               .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/work-complete-1-title.png", alt="")
                 p Te invitamos a recorrer nuestra finca, aprender sobre el proceso productivo del café, que inicia en la semilla, viveros, plantaciones; hasta el resultado final, una buena taza de café recién pasado.
