--- a/source/templates/components/coffee-presentation.pug
+++ b/source/templates/components/coffee-presentation.pug
@@ -5,17 +5,21 @@ section.c-presentations
         h2 presentaciones
       .col-6.col-sm-6.col-md-3
         a(href="our-coffee.html").c-presentations__item
-          img(src="dist/img/coffee-1.png", alt="")
+          img(src="dist/img/coffee-complete-1.png", alt="")
+          i.icon-plus
           p Café KERE'Ma Premium
       .col-6.col-sm-6.col-md-3
-        a(href="our-coffee-1.html").c-presentations__item
-          img(src="dist/img/coffee-2.png", alt="")
+        a(href="our-coffee-1.html").c-presentations__item.yellow
+          img(src="dist/img/coffee-complete-2.png", alt="")
+          i.icon-plus
           p Café KERE'Ma Especial
       .col-6.col-sm-6.col-md-3
-        a(href="our-coffee-2.html").c-presentations__item
-          img(src="dist/img/coffee-3.png", alt="")
+        a(href="our-coffee-2.html").c-presentations__item.green
+          img(src="dist/img/coffee-complete-3.png", alt="")
+          i.icon-plus
           p Café KERE'Ma Natural
       .col-6.col-sm-6.col-md-3
-        a(href="our-coffee-3.html").c-presentations__item
-          img(src="dist/img/coffee-4.png", alt="")
+        a(href="our-coffee-3.html").c-presentations__item.orange
+          img(src="dist/img/coffee-complete-4.png", alt="")
+          i.icon-plus
           p Café KERE'Ma Honey
