--- a/source/templates/our-chocolate-1.pug
+++ b/source/templates/our-chocolate-1.pug
@@ -16,12 +16,14 @@ html(lang="es")
           .col-12
             h2 presentaciones
           .col-6.col-sm-6.col-md-3
-            a(href="our-chocolate.html").c-presentations__item
-              img(src="dist/img/chocolate-1.png", alt="")
+            a(href="our-chocolate.html").c-presentations__item.brown
+              img(src="dist/img/chocolate-complete-1.png", alt="")
+              i.icon-plus
               p Pasta de Cacao KERE'Ma 
           .col-6.col-sm-6.col-md-3
-            a(href="our-chocolate-1.html").c-presentations__item
-              img(src="dist/img/chocolate-2.png", alt="")
+            a(href="our-chocolate-1.html").c-presentations__item.brown
+              img(src="dist/img/chocolate-complete-2.png", alt="")
+              i.icon-plus
               p Nibs de Cacao KERE'Ma 
 
 
