--- a/source/templates/our-coffee.pug
+++ b/source/templates/our-coffee.pug
@@ -27,14 +27,14 @@ html(lang="es")
                   li <b>Proceso:</b> Lavado
                   li <b>Altitud:</b> 1400 a 1800 m.s.n.m.
                   li <b>Variedad:</b> Caturra, Geisha, Catimor y Catuai.
-                .c-presentations__main__price
-                  h4 Presentaciones:
+                .c-presentations__main__price(style="color: #FF6300;")
+                  h4(style="color: #FF6300;") Presentaciones:
                   .c-presentations__main__price-item
-                    span 250gr.
-                    span S/.20
+                    span(style="color: #FF6300;") 250gr.
+                    span(style="box-shadow:0 0 0 2px #FF6300;") S/.20
                   .c-presentations__main__price-item
-                    span 1kg.
-                    span S/.50
+                    span(style="color: #FF6300;") 1kg.
+                    span(style="box-shadow:0 0 0 2px #FF6300;") S/.50
           .col-12
             a(href="index.html").c-presentations__button REGRESAR
             
