--- a/source/templates/our-method.pug
+++ b/source/templates/our-method.pug
@@ -16,20 +16,24 @@ html(lang="es")
           .col-12
             h2 presentaciones
           .col-6.col-sm-6.col-md-3
-            a(href="our-method.html").c-presentations__item
-              img(src="dist/img/metodo-1.png", alt="")
+            a(href="our-method.html").c-presentations__item.brown-2
+              img(src="dist/img/metodo-complete-1.png", alt="")
+              i.icon-plus
               p Caf. Italiana Kere’ma
           .col-6.col-sm-6.col-md-3
-            a(href="our-method-1.html").c-presentations__item
-              img(src="dist/img/metodo-2.png", alt="")
+            a(href="our-method-1.html").c-presentations__item.brown-2
+              img(src="dist/img/metodo-complete-2.png", alt="")
+              i.icon-plus
               p Caf. V60 Kere’ma
           .col-6.col-sm-6.col-md-3
-            a(href="our-method-2.html").c-presentations__item
-              img(src="dist/img/metodo-3.png", alt="")
+            a(href="our-method-2.html").c-presentations__item.brown-2
+              img(src="dist/img/metodo-complete-3.png", alt="")
+              i.icon-plus
               p Caf. Gota a Gota Kere’ma
           .col-6.col-sm-6.col-md-3
-            a(href="our-method-3.html").c-presentations__item
-              img(src="dist/img/metodo-4.png", alt="")
+            a(href="our-method-3.html").c-presentations__item.brown-2
+              img(src="dist/img/metodo-complete-4.png", alt="")
+              i.icon-plus
               p Caf. Francesa Kere’ma
     section.c-presentations
       .container
