--- a/source/templates/components/main.pug
+++ b/source/templates/components/main.pug
@@ -1,4 +1,4 @@
-main.c-main.wow.fadeInDown
+main.c-main.wow.fadeInDown.desktop
   .slider.single-item
     div
       .c-main__slide
@@ -13,3 +13,19 @@ main.c-main.wow.fadeInDown
     div
       .c-main__slide
         img(src="dist/img/banner_principal-2.png", alt="")
+
+main.c-main.wow.fadeInDown.movil
+  .slider.single-item
+    div
+      .c-main__slide
+        img(src="dist/img/banner_principal-movil.png", alt="")
+        .container
+          .row.wow.fadeInDown
+            .col-12.col-md-6.offset-md-4
+              h3 “EL CAFÉ QUE<br><b>UNE</b> A LAS<br>PERSONAS”
+    div
+      .c-main__slide
+        img(src="dist/img/banner_principa-1-movil.png", alt="")
+    div
+      .c-main__slide
+        img(src="dist/img/banner_principal-2-movil.png", alt="")
