--- a/source/scss/06-components/_main.scss
+++ b/source/scss/06-components/_main.scss
@@ -2,20 +2,27 @@
   overflow-x: hidden;
   &__slide{
     min-height: 650px;
-    height: 100vh;
+    height: 800px;
     background: #ccc;
     position: relative;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
 
+    @media only screen and (min-width: 992px){
+      height: 100vh;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
     h3{
-      text-align: right;
-      font-size: 3.5rem;
+      text-align: center;
+      font-size: 2.2rem;
       line-height: 1.2;
       color: #000;
       position: relative;
+      margin-top: 12rem;
 
       &:after{
         content: "";
@@ -24,8 +31,20 @@
         width: 9rem;
         height: .5rem;
         margin-left: auto;
+        margin-right: auto;
         margin-top: 1rem;
         background: #FF6300;
+      }
+
+      @media only screen and (min-width: 992px){
+        font-size: 3.5rem;
+        text-align: right;
+        margin-top: 0;
+
+        &:after{
+          margin-left: auto;
+          margin-right: 0;
+        }
       }
     }
 
@@ -43,6 +62,19 @@
         object-position: center center;
       }
       
+    }
+  }
+
+  &.movil{
+    display: block;
+    @media only screen and (min-width: 992px){
+      display: none
+    }
+  }
+  &.desktop{
+    display: none;
+    @media only screen and (min-width: 992px){
+      display: block;
     }
   }
   
