--- a/source/scss/06-components/_navbar.scss
+++ b/source/scss/06-components/_navbar.scss
@@ -24,7 +24,7 @@
   &__logo{
     display: block;
     position: absolute;
-    top: 2rem;
+    top: 0;
     left: 50%;
     transform:translate(-50%);
     background: #000;
@@ -32,6 +32,10 @@
     padding: 1rem;
     height: 10rem;
     width: 8rem;
+
+    @media only screen and (min-width: 992px){
+      top: 2rem;
+    }
 
 
     &.simple{
