--- a/source/templates/components/section-about.pug
+++ b/source/templates/components/section-about.pug
@@ -2,7 +2,7 @@ section.c-section-about
   img(src="dist/img/nacimos-back.png", alt="")
   .c-section-title.wow.fadeInDown
     img(src="dist/img/title-nacimos.svg", alt="")
-    p ...En una finca llena de hermosa vegetación y una cálida familia, que nos enseñó a trabajar la tierra y definió nuestra pasión en el café, un sentimiento que queremos transmitir a través de todas nuestras actividades.
+    p.c-section-about__description ...En una finca llena de hermosa vegetación y una cálida familia, que nos enseñó a trabajar la tierra y definió nuestra pasión en el café, un sentimiento que queremos transmitir a través de todas nuestras actividades.
 
 section.c-section-about.c-section-about--black
   .c-section-title.wow.fadeInDown
