--- a/source/templates/gallery-1.pug
+++ b/source/templates/gallery-1.pug
@@ -4,6 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     title Documents
     link(rel="stylesheet", href="dist/css/app.css")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
   body
     include components/navbar-1.pug
     main.c-banner-products
